@@ -1,5 +1,4 @@
-sample=
-    [ y0 ]
+sample=     [ y0 ]
 0 : [ 0  ]
 1 : [ 0  ]
 2 : [ 0  ]
@@ -10,8 +9,7 @@ sample=
 7 : [ 0  ]
 8 : [ 0  ]
 9 : [ 0  ]
-sample=
-    [ Unnamed in Unnamed ]
+sample=     [ Unnamed in Unnamed ]
 0 : [ 1                  ]
 1 : [ 0                  ]
 2 : [ 0                  ]
@@ -20,5 +18,16 @@ sample=
 5 : [ 0                  ]
 6 : [ 0                  ]
 7 : [ 0                  ]
+8 : [ 0                  ]
+9 : [ 1                  ]
+sample=     [ Unnamed in Unnamed ]
+0 : [ 1                  ]
+1 : [ 1                  ]
+2 : [ 0                  ]
+3 : [ 0                  ]
+4 : [ 1                  ]
+5 : [ 0                  ]
+6 : [ 0                  ]
+7 : [ 1                  ]
 8 : [ 0                  ]
 9 : [ 1                  ]
