@@ -1,51 +1,47 @@
 #! /usr/bin/env python
 
 from __future__ import print_function
-from openturns import *
+import openturns as ot
 
-TESTPREAMBLE()
-RandomGenerator.SetSeed(0)
+ot.TESTPREAMBLE()
 
-try:
+dim = 2
+distribution = ot.Normal(dim)
+#
+# Case 1: composite random vector based event
+#
 
-    dim = 2
-    distribution = Normal(dim)
-    #
-    # Case 1: composite random vector based event
-    #
+# The input vector
+X = ot.RandomVector(distribution)
+# The model: the identity function
+inVars = ot.Description(dim)
+for i in range(dim):
+    inVars[i] = "x" + str(i)
+model = ot.SymbolicFunction(inVars, inVars)
+# The output vector
+Y = ot.CompositeRandomVector(model, X)
+# The domain: [0, 1]^dim
+domain = ot.Interval(dim)
+# The event
+event = ot.Event(Y, domain)
 
-    # The input vector
-    X = RandomVector(distribution)
-    # The model: the identity function
-    inVars = Description(dim)
-    for i in range(dim):
-        inVars[i] = "x" + str(i)
-    model = SymbolicFunction(inVars, inVars)
-    # The output vector
-    Y = CompositeRandomVector(model, X)
-    # The domain: [0, 1]^dim
-    domain = Interval(dim)
-    # The event
-    event = Event(Y, domain)
+print("sample=", event.getSample(10))
 
-    print("sample=")
-    print(event.getSample(10))
+#
+# Case 2: process based event
+#
 
-    #
-    # Case 2: process based event
-    #
+# The input process
+X = ot.WhiteNoise(distribution)
+# The domain: [0, 1]^dim
+domain = ot.Interval(dim)
+# The event
+event = ot.Event(X, domain)
 
-    # The input process
-    X = WhiteNoise(distribution)
-    # The domain: [0, 1]^dim
-    domain = Interval(dim)
-    # The event
-    event = Event(X, domain)
+print("sample=", event.getSample(10))
 
-    print("sample=")
-    print(event.getSample(10))
-
-
-except:
-    import sys
-    print("t_Event_domain.py", sys.exc_info()[0], sys.exc_info()[1])
+# 3. from distribution
+antecedent = ot.RandomVector(ot.Normal(2))
+domain = ot.LevelSet(ot.SymbolicFunction(['x', 'y'], ['x^2+y^2']), ot.Less(), 1.0)
+event = ot.Event(antecedent, domain)
+print('sample=', event.getSample(10))
