@@ -61,6 +61,7 @@
  * #1054 (Optimization algorithms ignore MaxEvaluationNumber parameter)
  * #1057 (FittingTest.BestModelBIC to return bic value)
  * #1064 (The summary of a FunctionalChaosSobolIndices fails with more than 14 dimensions)
+ * #1071 (Event cannot be created from a RandomVector)
 
 == 1.12 release (2018-11-08) == #release-1.12
 
